--- a/mmNets-2023-web/_pages/about.html
+++ b/mmNets-2023-web/_pages/about.html
@@ -12,8 +12,8 @@
                 </p>
                 <br/>
                 <h3 class="section-title multiple-title">SPONSORS</h3>
-                <img src="assets/images/sigmobile.jpg" style="width:100px">
-                <img src="assets/images/acm.jpg" style="width:100px">
+                <img src="mmNets-2023-web/assets/images/sigmobile.jpg" style="width:100px">
+                <img src="mmNets-2023-web/assets/images/acm.jpg" style="width:100px">
                 
                 
 
