--- a/mmNets-2023-web/_pages/about.html
+++ b/mmNets-2023-web/_pages/about.html
@@ -27,7 +27,7 @@
 				<li>Keynote slides available now on the Program page.</li>
                 <li>Early Registation Deadline: September 7th, 2023 (<a href="https://www.sigmobile.org/mobicom/2023/registration.html" target="_blank">Link</a>)</li>
                 <li>Student Travel Grant Deadline: August 25th, 2023 (<a href="https://www.sigmobile.org/mobicom/2023/grants.html" target="_blank">Link</a>)</li> -->
-                <li>Link to <a data-scroll onclick="hidealldivs('speakers'); speakers.style.display='block';" href="assets/files/CFP-mmNets2023.pdf">Call for Papers</a></li>
+                <li>Link to <a data-scroll onclick="hidealldivs('speakers'); speakers.style.display='block';" href="mmNets-2023-web/assets/files/CFP-mmNets2023.pdf">Call for Papers</a></li>
                 <!-- <li>Flyer: <a href="assets/files/s3_flyer.pdf">PDF</a></li> -->
                 <li>mmNets workshop announced.</li>
               </ul>
@@ -35,7 +35,7 @@
 
                 <h3 class="section-title multiple-title">IMPORTANT DATES</h3>
 
-                {% include dates.html %}
+                {% include mmnets23_dates.html %}
                 
                 <!--<br/>
                 <b>Follow the latest news about S<sup>3</sup> 2023 on:</b>
