--- a/mmNets-2023-web/_pages/submission.html
+++ b/mmNets-2023-web/_pages/submission.html
@@ -33,7 +33,7 @@
 
         <h3 class="section-title multiple-title">Important Dates</h3>
 
-        {% include mmNets-2023-web/_includes/dates.html %}
+        {% include mmnets23_dates.html %}
         
     </div>
 </section>
