firt version of a working mmNets23 page

--- a/mmNets2023/_pages/about.html
+++ b/mmNets2023/_pages/about.html
@@ -12,8 +12,8 @@
                 </p>
                 <br/>
                 <h3 class="section-title multiple-title">SPONSORS</h3>
-                <img src="mmNets-2023-web/assets/images/sigmobile.jpg" style="width:100px">
-                <img src="mmNets-2023-web/assets/images/acm.jpg" style="width:100px">
+                <img src="assets/images/sigmobile.jpg" style="width:100px">
+                <img src="assets/images/acm.jpg" style="width:100px">
                 
                 
 
@@ -27,7 +27,7 @@
 				<li>Keynote slides available now on the Program page.</li>
                 <li>Early Registation Deadline: September 7th, 2023 (<a href="https://www.sigmobile.org/mobicom/2023/registration.html" target="_blank">Link</a>)</li>
                 <li>Student Travel Grant Deadline: August 25th, 2023 (<a href="https://www.sigmobile.org/mobicom/2023/grants.html" target="_blank">Link</a>)</li> -->
-                <li>Link to <a data-scroll onclick="hidealldivs('speakers'); speakers.style.display='block';" href="mmNets-2023-web/assets/files/CFP-mmNets2023.pdf">Call for Papers</a></li>
+                <li>Link to <a href="assets/files/CFP-mmNets2023.pdf">Call for Papers</a></li>
                 <!-- <li>Flyer: <a href="assets/files/s3_flyer.pdf">PDF</a></li> -->
                 <li>mmNets workshop announced.</li>
               </ul>
