--- a/mmNets2023/_pages/awards.html
+++ b/mmNets2023/_pages/awards.html
@@ -1,4 +1,4 @@
-<section id="awards" class="section faq" style="display: none;">
+<section id="awards" class="section awards" style="display: none;">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
