--- a/mmNets2023/_pages/past_events.html
+++ b/mmNets2023/_pages/past_events.html
@@ -1,4 +1,4 @@
-<section id="past_events" class="section schedule" style="display: none;">
+<section id="past_events" class="section past_events" style="display: none;">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
