--- a/mmNets2023/_pages/registration.html
+++ b/mmNets2023/_pages/registration.html
@@ -1,4 +1,4 @@
-<section id="keynote" class="section keynote" style="display: none;">
+<section id="registration" class="section registration" style="display: none;">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
