--- a/mmNets2023/_pages/submission.html
+++ b/mmNets2023/_pages/submission.html
@@ -1,4 +1,4 @@
-<section id="registration" class="section registration" style="display: none;">
+<section id="submission" class="section submission" style="display: none;">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
